--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 <head>
   <meta charset="utf-8">
@@ -17,8 +18,7 @@
     <h2>How to use</h2>
     <ol>
       <li><a href="https://mportal.cau.ac.kr/main.do" target="_blank" title="중앙대학교 포탈로 이동합니다."><u>중앙대포탈</u></a> - 강의마당 - 졸업관련 성적조회</li>
-      <li>수강학점을 정확히 입력하세요.</li>
-      <li>확인 후 학과사무실에 연락하세요.</li>
+      <li>✔: 기준 통과 ❕: 주의 요망 ❌: 졸업 불가</li>
     </ol>
   </div>
 
@@ -26,169 +26,167 @@
   <table border="solid">
     <caption><img src="logo.png" alt="" class="caplogo"> 기본 정보</caption>
     <tr>
-      <th width="50%">입학 연도</th>
+      <th width="50%">신입학 연도</th>
       <th>다전공</th>
     </tr>
     <tr>
       <td>
-        <select class="infoselect">
-          <option value="">--</option>
-          <option value="2018">2018</option>
+        <select class="infoselect" id="year">
+          <option value="0">--</option>
           <option value="2019">2019</option>
           <option value="2020">2020</option>
           <option value="2021">2021</option>
         </select>
       </td>
       <td>
-        <select class="infoselect">
-          <option value="">--</option>
-          <option value="">전공심화</option>
-          <option value="">복수전공</option>
-          <option value="">융합전공</option>
-          <option value="">연계전공</option>
-          <option value="">자기설계전공</option>
-        </select>
+        <form id="multi-major-form">
+          <select class="infoselect" id="multi-major">
+            <option value="0">--</option>
+            <option value="66">전공심화</option>
+            <option value="45">복수전공</option>
+            <option value="45">자기설계전공</option>
+          </select>
+        </form>
       </td>
     </tr>
     <br>
   </table>
 
+  <form id="lib-form">
+    <table border="solid">
+      <caption><img src="logo.png" alt="" class="caplogo"> 교양 영역</caption>
 
-  <table border="solid">
-    <caption><img src="logo.png" alt="" class="caplogo"> 교양 영역</caption>
+      <tr>
+        <th colspan="2">이수 구분</th>
+        <th>최소 학점</th>
+        <th>최대 학점</th>
+        <th colspan="2">이수 학점</th>
+      </tr>
 
-    <tr>
-      <th colspan="2">이수 구분</th>
-      <th>최소 학점</th>
-      <th>최대 학점</th>
-      <th colspan="2">이수 학점</th>
-    </tr>
+      <tr>
+        <th rowspan="3">공통교양</th>
+        <th>국어</th>
+        <td>
+          <input type="text" value="2" id="kor-st" readonly>
+        </td>
+        <td>
+          <input type="text" value="2" readonly>
+        </td>
+        <td colspan="2">
+          <select id="kor-credit">
+            <option value="0">0</option>
+            <option value="2">2</option>
+          </select>
+          <label for="kor-credit"></label>
+        </td>
+      </tr>
 
-    <tr>
-      <th rowspan="3">공통교양</th>
-      <th>국어</th>
-      <td>
-        <input type="text" value="2" readonly>
-      </td>
-      <td>
-        <input type="text" value="2" readonly>
-      </td>
-      <td colspan="2">
-        <select class="" id="kor-credit">
-          <option value="0">0</option>
-          <option value="2">2</option>
-        </select>
-        <label for="kor-credit"></label>
-      </td>
-    </tr>
+      <tr>
+        <th>영어</th>
+        <td>
+          <input type="text" value="2" id="eng-st" readonly>
+        </td>
+        <td>
+          <input type="text" value="2" readonly>
+        </td>
+        <td colspan="2">
+          <select id="eng-credit">
+            <option value="0">0</option>
+            <option value="2">2</option>
+          </select>
+          <label for="eng-credit"></label>
+        </td>
+      </tr>
 
-    <tr>
-      <th>영어</th>
-      <td>
-        <input type="text" value="2" readonly>
-      </td>
-      <td>
-        <input type="text" value="2" readonly>
-      </td>
-      <td colspan="2">
-        <select class="" id="eng-credit">
-          <option value="0">0</option>
-          <option value="2">2</option>
-        </select>
-        <label for="eng-credit"></label>
-        <br><input type="checkbox" id="eng-check"><label for="eng-check">면제</label>
-      </td>
-    </tr>
+      <tr>
+        <th>기타</th>
+        <td>
+          <input type="text" value="10" id="other-st" readonly>
+        </td>
+        <td>
+          <input type="text" value="10" readonly>
+        </td>
+        <td colspan="2">
+          <select id="other-credit">
+            <option value="0">0</option>
+            <option value="2">2</option>
+            <option value="4">4</option>
+            <option value="6">6</option>
+            <option value="8">8</option>
+            <option value="10">10</option>
+          </select>
+          <label for="other-credit"></label>
+        </td>
+      </tr>
 
-    <tr>
-      <th>기타</th>
-      <td>
-        <input type="text" value="10" readonly>
-      </td>
-      <td>
-        <input type="text" value="10" readonly>
-      </td>
-      <td colspan="2">
-        <select class="" id="other-credit">
-          <option value="0">0</option>
-          <option value="2">2</option>
-          <option value="4">4</option>
-          <option value="6">6</option>
-          <option value="8">8</option>
-          <option value="10">10</option>
-        </select>
-        <label for="other-credit"></label>
-        <br><input type="checkbox" id="other-check"><label for="other-check">회계학원론 이수</label>
-      </td>
-    </tr>
+      <tr>
+        <th colspan="2" rowspan="5">핵심교양</th>
+        <td rowspan="5">
+          <input type="text" value="15" id="core-st" readonly>
+        </td>
+        <td rowspan="5"></td>
+        <td>
+          <input type="checkbox" id="core1"><label for="core1">도전</label>
+        </td>
+        <td rowspan="5">
+          <input type="number" id="core" placeholder="0" min="0"><label for="core"> 학점</label>
+        </td>
+      </tr>
 
-    <tr>
-      <th colspan="2" rowspan="5">핵심교양</th>
-      <td rowspan="5">
-        <input type="text" value="14" readonly>
-      </td>
-      <td rowspan="5"></td>
-      <td>
-        <input type="checkbox" id="core1" value=""><label for="core1">도전</label>
-      </td>
-      <td rowspan="5">
-        <input type="number" id="core" value="" placeholder="0" min="0"><label for="core">학점</label>
-      </td>
-    </tr>
+      <tr>
+        <td>
+          <input type="checkbox" id="core2"><label for="core2">창의</label>
+        </td>
+      </tr>
 
-    <tr>
-      <td>
-        <input type="checkbox" id="core2" value=""><label for="core2">창의</label>
-      </td>
-    </tr>
+      <tr>
+        <td>
+          <input type="checkbox" id="core3"><label for="core3">융합</label>
+        </td>
+      </tr>
 
-    <tr>
-      <td>
-        <input type="checkbox" id="core3" value=""><label for="core3">융합</label>
-      </td>
-    </tr>
+      <tr>
+        <td>
+          <input type="checkbox" id="core4"><label for="core4">신뢰</label>
+        </td>
+      </tr>
 
-    <tr>
-      <td>
-        <input type="checkbox" id="core4" value=""><label for="core4">신뢰</label>
-      </td>
-    </tr>
+      <tr>
+        <td>
+          <input type="checkbox" id="core5"><label for="core5">소통</label>
+        </td>
+      </tr>
 
-    <tr>
-      <td>
-        <input type="checkbox" id="core5" value=""><label for="core5">소통</label>
-      </td>
-    </tr>
+      <tr>
+        <th colspan="2">선택교양</th>
+        <td>
+          <input type="text" value="0" id="choice-st" readonly>
+        </td>
+        <td></td>
+        <td colspan="2">
+          <input type="number" id="choice" value="" placeholder="0" min="0"><label for="choice"> 학점</label>
+        </td>
+      </tr>
 
-    <tr>
-      <th colspan="2">선택교양</th>
-      <td>
-        <input type="text" value="0" readonly>
-      </td>
-      <td></td>
-      <td colspan="2">
-        <input type="number" id="choice" value="" placeholder="0" min="0"><label for="choice">학점</label>
-      </td>
-    </tr>
-
-    <tr>
-      <th colspan="2">합계</th>
-      <td>
-        <input type="text" value="28" readonly>
-      </td>
-      <td>
-        <input type="text" value="45" readonly>
-      </td>
-      <td colspan="2">
-        <input type="text" id="sum" value="0" style="color:red;" readonly><label for="sum">학점</label>
-      </td>
-    </tr>
-  </table>
+      <tr>
+        <th colspan="2">합계</th>
+        <td>
+          <input type="text" value="29" id="sum-st" readonly>
+        </td>
+        <td>
+          <input type="text" value="45" readonly>
+        </td>
+        <td colspan="2">
+          <input type="text" id="sum" value="0" style="color:red;" readonly><label for="sum"> 학점</label>
+        </td>
+      </tr>
+    </table>
+  </form>
 
   <br>
   <div class="btns">
-    <input type="reset" value="RESET">
-    <input type="button" value="CHECK">
+    <input type="reset" value="RESET" id="lib-reset">
+    <input type="button" value="CHECK" id="lib-check">
   </div>
 
 
@@ -202,100 +200,129 @@
 
 
   <br>
-  <table border="solid">
-    <caption><img src="logo.png" alt="" class="caplogo"> 전공 영역</caption>
+  <form id="maj-form">
+    <table border="solid">
+      <caption><img src="logo.png" alt="" class="caplogo"> 전공 영역</caption>
 
-    <tr>
-      <th>이수 구분</th>
-      <th>최소 학점</th>
-      <th>이수 학점</th>
-    </tr>
+      <tr>
+        <th>이수 구분</th>
+        <th>최소 학점</th>
+        <th colspan="3">이수 학점</th>
+      </tr>
 
-    <tr>
-      <th>전공기초</th>
-      <td>
-        <input type="text" value="12" readonly>
-      </td>
-      <td>
-        <input type="number" id="maj-basic" value="" placeholder="0" min="0"><label for="maj-basic">학점</label>
-      </td>
-    </tr>
+      <tr>
+        <th>전공기초</th>
+        <td>
+          <input type="text" value="12" id="basic-st" readonly>
+        </td>
+        <td colspan="3">
+          <input type="number" id="basic" placeholder="0" min="0"><label for="maj-basic"> 학점</label>
+        </td>
+      </tr>
 
-    <tr>
-      <th>전공필수</th>
-      <td>
-        <input type="text" value="15" readonly>
-      </td>
-      <td>
-        <input type="number" id="maj-required" value="" placeholder="0" min="0"><label for="maj-required">학점</label>
-      </td>
-    </tr>
+      <tr>
+        <th>전공필수</th>
+        <td>
+          <input type="text" value="15" id="required-st" readonly>
+        </td>
+        <td colspan="3">
+          <input type="number" id="required" placeholder="0" min="0"><label for="maj-required"> 학점</label>
+        </td>
+      </tr>
 
-    <tr>
-      <th>전공</th>
-      <td>
-        <input type="text" id="maj-credit" value="45" readonly>
-        <br>
-        <label for="maj-credit">(전필 포함)</label>
-      </td>
-      <td>
-        <input type="number" id="maj" value="" placeholder="0" min="0"><label for="maj">학점</label>
-      </td>
-    </tr>
+      <tr>
+        <th>전공</th>
+        <td>
+          <input type="text" id="major-st" value="45" readonly>
+          <br>
+          <label for="major-st">(전공필수 포함)</label>
+        </td>
+        <td colspan="3">
+          <input type="number" id="major" placeholder="0" min="0"><label for="major"> 학점</label>
+        </td>
+      </tr>
 
-    <tr>
-      <th>부전공</th>
-      <td>
-        <input type="text" value="21" readonly>
-        <br>
-        <label for="maj-credit">(전공필수 6학점 이상 포함)</label>
-      </td>
-      <td>
-        <input type="number" id="minor" value="" placeholder="0" min="0"><label for="minor">학점</label>
-        <br><input type="checkbox" id="min-check"><label for="min-check">해당 없음</label>
-      </td>
-    </tr>
+      <tr id="double-table" style="display:none">
+        <th>복수전공</th>
+        <td>
+          <input type="text" id="double-st" value="45" readonly>
+        </td>
+        <td colspan="3">
+          <input type="number" id="double" placeholder="0" min="0"><label for="double"> 학점</label>
+          <br>
+          <input type="checkbox" id="double-none" hidden>
+        </td>
+      </tr>
 
-    <tr>
-      <th>자유선택</th>
-      <td>
-        <input type="text" value="1" readonly>
-      </td>
-      <td>
-        <input type="number" id="freechoice" value="" placeholder="0" min="0"><label for="freechoice">학점</label>
-        <br><input type="checkbox" id="freechoice-check"><label for="freechoice-check">CAU세미나(1학점)</label>
-      </td>
-    </tr>
+      <tr id="plan-table" style="display:none">
+        <th>자기설계전공</th>
+        <td>
+          <input type="text" value="36" id="plan-st" readonly>
+        </td>
+        <td>
+          <input type="number" value="" id="plan" placeholder="0" min="0"><label for="plan"> 학점</label>
+          <br>
+          <input type="checkbox" id="plan-none" hidden>
+        </td>
+        <th>교차<br>인정</th>
+        <td>
+          <input type="number" value="" id="plan-cross" placeholder="0" min="0" max="6"><label for="plan-cross"> 학점</label>
+        </td>
+      </tr>
 
-    <tr>
-      <th>교직</th>
-      <td>
-        <input type="text" value="22" readonly>
-      </td>
-      <td>
-        <input type="number" id="teaching" value="" placeholder="0" min="0"><label for="teaching">학점</label>
-        <br><input type="checkbox" id="teaching-check"><label for="teaching-check">해당 없음</label>
-      </td>
-    </tr>
+      <tr>
+        <th>부전공</th>
+        <td colspan="3">
+          <input type="text" value="21" id="minor-st" readonly>
+          <br>
+          <label for="minor-st">(전공필수 6학점 이상 포함)</label>
+        </td>
+        <td>
+          <input type="number" id="minor" placeholder="0" min="0"><label for="minor"> 학점</label>
+          <br><input type="checkbox" id="minor-none"><label for="minor-check">해당 없음</label>
+        </td>
+      </tr>
 
-    <tr>
-      <th>총 학점</th>
-      <td>
-        <input type="text" value="132" readonly>
-      </td>
-      <td>
-        <input type="text" id="total" value="0" style="color:red;" readonly><label for="total">학점</label>
-      </td>
-    </tr>
-  </table>
+      <tr>
+        <th>자유선택</th>
+        <td>
+          <input type="text" value="1" id="freechoice-st" readonly>
+        </td>
+        <td colspan="3">
+          <input type="number" id="freechoice" placeholder="0" min="0"><label for="freechoice"> 학점</label>
+        </td>
+      </tr>
+
+      <tr>
+        <th>교직</th>
+        <td>
+          <input type="text" value="22" id="teaching-st" readonly>
+        </td>
+        <td colspan="3">
+          <input type="number" id="teaching" placeholder="0" min="0"><label for="teaching"> 학점</label>
+          <br><input type="checkbox" id="teaching-none"><label for="teaching-check">해당 없음</label>
+        </td>
+      </tr>
+
+      <tr>
+        <th>총 학점</th>
+        <td>
+          <input type="text" id="total-st" value="132" readonly>
+        </td>
+        <td colspan="3">
+          <input type="text" id="total" value="0" style="color:red;" readonly><label for="total"> 학점</label>
+        </td>
+      </tr>
+    </table>
+  </form>
 
   <br>
   <span>정확한 졸업사정 결과는<br>아래 학과 전화번호로 연락하여 반드시 확인하시기 바랍니다!</span>
 
   <br>
   <div class="btns">
-    <input type="reset" value="RESET">
-    <input type="button" value="CHECK">
+    <input type="reset" value="RESET" id="maj-reset">
+    <input type="button" value="CHECK" id="maj-check">
   </div>
 
   <div class="call">
@@ -307,72 +334,78 @@
   </div>
 
 
-  <table border="solid">
-    <caption><img src="logo.png" alt="" class="caplogo"> 기타 졸업요건</caption>
+  <form id="etc-form">
+    <table border="solid">
+      <caption><img src="logo.png" alt="" class="caplogo"> 기타 졸업요건</caption>
 
-    <tr>
-      <th colspan="2">구분</th>
-      <th>통과 여부</th>
-      <th>이수 기준</th>
-    </tr>
+      <tr>
+        <th colspan="2">구분</th>
+        <th>통과 여부</th>
+        <th>이수 기준</th>
+      </tr>
 
-    <tr>
-      <th rowspan="3">졸업 인정제</th>
-      <th>영어</th>
-      <td>
-        <input type="checkbox" id="eng-pass"><label for="eng-pass">통과/면제</label>
-      </td>
-      <td>전공영어강의 3개 수강 또는 영어성적 제출</td>
-    </tr>
+      <tr>
+        <th rowspan="3">졸업 인정제</th>
+        <th>영어</th>
+        <td>
+          <input type="checkbox" id="eng-pass"><label for="eng-pass">통과/면제</label>
+        </td>
+        <td>전공영어강의 3개 수강 또는 영어성적 제출</td>
+      </tr>
 
-    <tr>
-      <th>한자</th>
-      <td>
-        <input type="checkbox" id="chn-pass"><label for="chn-pass">통과/면제</label>
-      </td>
-      <td>한자시험 3급 이상 또는 한자 교과목 2개 수강</td>
-    </tr>
+      <tr>
+        <th>한자</th>
+        <td>
+          <input type="checkbox" id="chn-pass"><label for="chn-pass">통과/면제</label>
+        </td>
+        <td>한자시험 3급 이상 또는 한자 교과목 2개 수강</td>
+      </tr>
 
-    <tr>
-      <th>한국어</th>
-      <td>
-        <input type="checkbox" id="kor-pass"><label for="kor-pass">통과/면제</label>
-      </td>
-      <td>TOPIK 4급 이상(외국인 유학생만 해당)</td>
-    </tr>
+      <tr>
+        <th>한국어</th>
+        <td>
+          <input type="checkbox" id="kor-pass"><label for="kor-pass">통과/면제</label>
+        </td>
+        <td>TOPIK 4급 이상(외국인 유학생만 해당)</td>
+      </tr>
 
-    <tr>
-      <th rowspan="2">졸업시험/논문</th>
-      <th>주전공</th>
-      <td>
-        <input type="checkbox" id="firstmajor"><label for="firstmajor">합격</label>
-      </td>
-      <td>실험실습보고, 졸업작품, 실기발표 등</td>
-    </tr>
+      <tr>
+        <th rowspan="2">졸업시험</th>
+        <th>주전공</th>
+        <td>
+          <input type="checkbox" id="firstmajor"><label for="firstmajor">합격</label>
+        </td>
+        <td></td>
+      </tr>
 
-    <tr>
-      <th>복수전공</th>
-      <td>
-        <input type="checkbox" id="doublemajor"><label for="doublemajor">합격/해당 없음</label>
-      </td>
-      <td></td>
-    </tr>
+      <tr>
+        <th>복수전공</th>
+        <td>
+          <input type="checkbox" id="doublemajor"><label for="doublemajor">합격/해당 없음</label>
+        </td>
+        <td></td>
+      </tr>
 
-    <tr>
-      <th colspan="2">전 학년 평점</th>
-      <td>
-        <input type="number" id="average" value="" placeholder="0.00" min="0" step=".01"><label for="average">/4.5</label>
-      </td>
-      <td>최종 평점 2.0 미만 졸업 불가</td>
-    </tr>
-  </table>
+      <tr>
+        <th colspan="2">전 학년 평점</th>
+        <td>
+          <input type="number" id="average" value="" placeholder="0.00" min="0" step=".01"><label for="average">/4.5</label>
+        </td>
+        <td>최종 평점 2.0 미만 졸업 불가</td>
+      </tr>
+    </table>
+  </form>
 
   <br>
   <div class="btns">
-    <input type="reset" value="RESET">
-    <input type="button" value="CHECK">
+    <input type="reset" value="RESET" id="etc-reset">
+    <input type="button" value="CHECK" id="etc-check">
   </div>
-
+  <br>
+  <footer>
+    <span id="about">About</span>
+  </footer>
+  <script src="app.js"></script>
 </body>
 
 </html>
